[project]
name = "vintage-clock-cdll"
version = "0.1.0"
description = "Vintage analog clock using a Circular Doubly Linked List (CDLL) with Tkinter UI"
readme = "README.md"
requires-python = ">=3.10"
authors = [
{ name = "Camilo Bolaños Arturo" }
]
license = { text = "MIT" }

dependencies = []

[project.optional-dependencies]
dev = [
"ruff>=0.4.0",
"mypy>=1.10.0"
]

[project.scripts]
vintage-clock = "main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
